files: fixed text wrapping for files tree

--- a/Localization/ClientApp/src/app/files/components/files/files.component.css
+++ b/Localization/ClientApp/src/app/files/components/files/files.component.css
@@ -53,6 +53,7 @@ label {
 table td, table th
 {
     padding: 2px;
+    word-wrap: break-word;
 }
 
 table th
